# NervCTF

./: .gitignore  .nervctf.yml.example  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  bump-version.sh  claude-changes.md  config.yml  docker-compose.yml  first_setup.sh  flake.nix  result  shell.nix
.github/workflows/: ci.yml  security.yml
challenges/crypto-challenge/: encrypted.txt
challenges/forensics-challenge/: clue.txt  image.dd
challenges/web-challenge/: Dockerfile  app.py
ctfd-configurator/: Cargo.toml  Dockerfile
ctfd-configurator/src/: main.rs
ctfd-configurator/src/ctfd_api/endpoints/: auth.rs  challenges.rs  config.rs  flags.rs  hints.rs  mod.rs  pages.rs  statistics.rs  tags.rs
ctfd-configurator/src/ctfd_api/models/: auth.rs  challenges.rs  config.rs  files.rs  flags.rs  hints.rs  mod.rs  notifications.rs  pages.rs  scoreboard.rs  statistics.rs  tags.rs  teams.rs  tokens.rs  users.rs
docs/: challenge_manager.md  claude-changes.md  ctfd_api.md  instance-challenges.md  remote-monitor.md  validator.md
local-configurator/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_challenge_manager.sh
local-configurator/src/: challenge_manager.rs  main.rs
nervctf/: Cargo.toml
nervctf/src/: directory_scanner.rs  lib.rs  main.rs  utils.rs
nervctf/src/challenge_manager/: mod.rs  sync.rs
nervctf/src/ctfd_api/: client.rs  mod.rs
nervctf/src/ctfd_api/endpoints/: challenges.rs  hints.rs
nervctf/src/ctfd_api/models/: mod.rs
remote-monitor/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.sh  ctfcli.Dockerfile  run.sh
remote-monitor/challenges/sample-challenge/: challenge.yml  sample-file.txt
remote-monitor/src/: lib.rs  main.rs
remote-monitor/src/ctfd_api/: client.rs  mod.rs
remote-monitor/src/ctfd_api/endpoints/: files.rs  notifications.rs  scoreboard.rs  teams.rs  tokens.rs  users.rs
remote-monitor/src/ctfd_api/models/: auth.rs  challenges.rs  config.rs  files.rs  flags.rs  hints.rs  notifications.rs  pages.rs  scoreboard.rs  statistics.rs  tags.rs  teams.rs  tokens.rs  users.rs
scripts/: docker_user_setup.sh  install_docker_on_remote.sh
src/nervctf/: Cargo.toml  Dockerfile
src/nervctf/assets/: nervctf_playbook.yml  nervctf_upgrade_playbook.yml
src/nervctf/assets/ctfd-plugin/: __init__.py
src/nervctf/assets/ctfd-plugin/assets/: create.html  create.js  update.html  update.js  view.html  view.js
src/nervctf/assets/ctfd-plugin/models/: challenge.py
src/nervctf/src/: directory_scanner.rs  fix.rs  lib.rs  main.rs  setup.rs  utils.rs  validator.rs
src/nervctf/src/challenge_manager/: mod.rs  sync.rs
src/nervctf/src/challenge_manager/spec/: challenge-example.yml
src/nervctf/src/ctfd_api/: client.rs
src/nervctf/src/ctfd_api/endpoints/: challenges.rs  files.rs  flags.rs  hints.rs  mod.rs  tags.rs
src/nervctf/src/ctfd_api/models/: asdf.json  mod.rs
src/remote-monitor/: Cargo.toml  Dockerfile  docker-compose.yml
src/remote-monitor/assets/: admin.html
src/remote-monitor/src/: ctfd_db.rs  db.rs  main.rs
src/remote-monitor/src/instance/: compose.rs  docker.rs  lxc.rs  mod.rs  ssh.rs  vagrant.rs
templates/compose/: instance-dynamic.yml  instance-random.yml  instance-static.yml
templates/docker/: instance-dynamic.yml  instance-random.yml  instance-static.yml
templates/lxc/: instance-dynamic.yml  instance-random.yml  instance-static.yml
templates/standard/: dynamic.yml  standard-with-files.yml  standard.yml
templates/vagrant/: instance-dynamic.yml  instance-random.yml  instance-static.yml
utils/: README.md  docker-compose.yml  first_setup.sh  install_docker_on_remote.sh  nervctf_playbook.yml
utils/solve_webhook/: docker-compose.yml
