[package]
name = "local-configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15"
