[package]
name = "nervctf"
version = "2.2.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nervctf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
anyhow = "1.0"
tempfile = "3.20.0"
dialoguer = "0.11"
