[package]
name = "remote-monitor"
version = "2.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
rand = "0.8"
shlex = "1"
tempfile = "3"
